MISIS-1: Fixed python dependencied + added .env file

--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -20,9 +20,9 @@ dependencies = [
     "ansible",
     "uvicorn",
     "asyncpg",
-    "aioredis",
+    "redis",
     "psycopg2-binary",
-    "sqlalchemy"
+    "sqlalchemy",
 ]
 dynamic = ["version"]
 
