MISIS-2: Added port configuration

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       - ANSIBLE_RUNNER_API_PREFIX=${ANSIBLE_RUNNER_API_PREFIX}
       - ANSIBLE_RUNNER_CONFIG_PASS=${ANSIBLE_RUNNER_CONFIG_PASS}
+      - ANSIBLE_RUNNER_INNER_PORT=${ANSIBLE_RUNNER_INNER_PORT}
     ports:
       - ${ANSIBLE_RUNNER_OUTER_PORT}:${ANSIBLE_RUNNER_INNER_PORT}
 
